# rust-bambulab

./: Cargo.toml
src/: error.rs  level.rs  lib.rs  main.rs  manager.rs  printer.rs
src/types/: command.rs  errors.rs  mod.rs  report.rs
ui/: Cargo.toml
ui/src/: chart.rs  control.rs  main.rs  message.rs
