[package]
name = "bambu"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["ui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.3.2", features = [ "derive" ] }
#rumqttc = { version = "0.21.0", features = [ "use-native-tls" ] }
paho-mqtt = "*"
tokio = { version =  "1.28.2", features = [ "full" ] }
thiserror = "*"
displaydoc = "*"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
anyhow = "*"
rustls = { version = "*", features = ["dangerous_configuration"] }
futures = "*"
serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
regex = "*"
lazy_static = "*"

[patch.crates-io]
plotters-iced = { git = "https://github.com/Joylei/plotters-iced.git" }
bambu = { path = "." }
