[package]
name = "bbl"
version = "0.1.0"
edition = "2021"

[dependencies]

iced = { version = "0.9.0", features = ["canvas", "tokio"] }
iced_wgpu = "0.10.0"
iced_native = "0.10.0"
plotters-iced = "0.8"
plotters="0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "*", features = [ "full" ] }
reqwest = { version = "0.11", features = ["json"] }
structopt = "0.3.26"
anyhow = "1.0.72"
num-traits = "*"
